--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -72,7 +72,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Lab6P2_JosueHam
-main.class=lab6p2_josueham.Lab6P2_JosueHam
+main.class=lab6p2_josueham.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
